--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: "Ubuntu", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-image: linear-gradient(to right, rgba(247, 76, 6, 0.5), rgba(249, 188, 44, 0.5)), url('https://rohan3004.github.io/Face-Frenzy/images/background.png');
+    background-image: linear-gradient(to right, rgba(247, 76, 6, 0.5), rgba(249, 188, 44, 0.5)), url('/images/backgroud_new.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -21,7 +21,40 @@ body {
 
 h1 {
     font-size: 3rem;
-    margin-bottom: 2vh;
+    margin-bottom: 1vh;
+}
+
+#typing-heading{
+    margin-top: 2vh;
+    overflow: hidden;
+    /* border-right: 2px solid #000; */
+    overflow: hidden;
+    white-space: nowrap;
+    animation: typing 3s steps(30) forwards, blink-caret 0.5s step-end infinite alternate;
+    max-width: 90vw;
+    word-wrap: break-word;
+    margin-left: auto;
+    margin-right: auto;
+    height: 45px;
+}
+
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: #000;
+    }
 }
 
 button {
@@ -76,6 +109,10 @@ button:hover {
 }
 
 @media (max-width: 768px) {
+    #typing-heading {
+        font-size: 2rem;
+        /* margin-top: 2vh; */
+    }
     .game-board {
         grid-template-columns: repeat(3, 10vh);
     }
