--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: "Ubuntu", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-image: linear-gradient(to right, rgba(247, 76, 6, 0.5), rgba(249, 188, 44, 0.5)), url('https://raw.githubusercontent.com/rohan3004/Face-Frenzy/main/images/backgroud_new.jpg');
+    background-image: linear-gradient(to right, rgba(247, 76, 6, 0.5), rgba(249, 188, 44, 0.5)), url('images/desk_background.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -14,7 +14,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    color: #F7F6BB;
+    color: #0C0C0C;
     text-align: center;
 }
 
@@ -35,7 +35,7 @@ h1 {
     word-wrap: break-word;
     margin-left: auto;
     margin-right: auto;
-    height: 50px;
+    height: 54px;
 }
 
 
@@ -59,7 +59,7 @@ h1 {
 
 button {
     margin-right: 1vh;
-    background-color: #87A922;
+    background-color: #0C0C0C;
     border: none;
     color: #F7F6BB;
     padding: 10px 20px;
@@ -71,7 +71,7 @@ button {
 
 
 button:hover {
-    background-color: #114232;
+    background-color: #481E14;
 }
 
 
@@ -96,7 +96,7 @@ button:hover {
     width: 15vh;
     height: 15vh;
     border-radius: 50%;
-    background-color: #114232;
+    background-color: #481E14;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -106,6 +106,9 @@ button:hover {
 }
 
 @media (max-width: 768px) {
+    body{
+        background-image: linear-gradient(to right, rgba(247, 76, 6, 0.5), rgba(249, 188, 44, 0.5)), url('/images/mobile.gif');
+    }
     #typing-heading {
         font-size: 2rem;
     }
@@ -149,5 +152,5 @@ button:hover {
 }
 
 .hole img.clicked {
-    border: 4px solid tomato;
+    border: 4px solid #D20062;
 }
